@@ -8,6 +8,10 @@ Switching to endpoint as the only/primary way of specifying databases:
 Admins: resilience against DevOps API omitting keyspace/keyspaces if none is found
 AstraDBAdmin: added filters and automatic pagination to [async_]list_databases
 Consistent handling of deletedCount=-1 from the API (always returned as-is)
+Cursors: alignment and rework
+    - states are an enum; state names reworked for clarity
+    - _copy and _to_sync methods always return a clean pristine cursor
+    - "retrieved" property deprecated (removal 2.0). Use `consumed`
 Deprecation of all `set_caller` (=> to be set at constructor-time) (removal in 2.0)
 Callers and user-agent string:
     - remove RAGStack automatic detection
